Projeto_Compilador/PL-Projeto /src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARET
    CONST
    DIVIDEEQUALS
    FILE
    FUNCTION
    GOTO
    IN
    LABEL
    LBRACKETSUB
    MINUSEQUALS
    NIL
    PACKED
    PLUSEQUALS
    PROCEDURE
    RBRACKETSUB
    RECORD
    REPEAT
    SET
    TIMESEQUALS
    TYPE
    UNTIL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER SEMICOLON block PERIOD
Rule 2     block -> declarations sub_block
Rule 3     declarations -> VAR var_list
Rule 4     declarations -> <empty>
Rule 5     var_list -> var_list decl SEMICOLON
Rule 6     var_list -> decl SEMICOLON
Rule 7     decl -> vars COLON type
Rule 8     decl -> vars COLON array
Rule 9     vars -> vars COMMA IDENTIFIER
Rule 10    vars -> IDENTIFIER
Rule 11    type -> INTEGER
Rule 12    type -> BOOLEAN
Rule 13    type -> REAL
Rule 14    type -> STRING
Rule 15    type -> CHAR
Rule 16    array -> ARRAY LBRACKET NUMBER DOUBLEPERIOD NUMBER RBRACKET OF type
Rule 17    sub_block -> BEGIN statement_list END
Rule 18    sub_block -> BEGIN END
Rule 19    statement_list -> statement_list SEMICOLON statement
Rule 20    statement_list -> statement
Rule 21    statement -> atribution_statement
Rule 22    statement -> if_statement
Rule 23    statement -> while_statement
Rule 24    statement -> for_statement
Rule 25    statement -> case_statement
Rule 26    statement -> procedure_call
Rule 27    statement -> sub_block
Rule 28    statement -> <empty>
Rule 29    atribution_statement -> IDENTIFIER ATRIBUTION expression
Rule 30    if_statement -> IF expression THEN statement ELSE statement
Rule 31    if_statement -> IF expression THEN statement
Rule 32    while_statement -> WHILE expression DO statement
Rule 33    for_statement -> FOR IDENTIFIER ATRIBUTION expression TO expression DO statement
Rule 34    for_statement -> FOR IDENTIFIER ATRIBUTION expression DOWNTO expression DO statement
Rule 35    case_statement -> CASE expression OF case_list END
Rule 36    case_list -> case_list SEMICOLON case_item
Rule 37    case_list -> case_item
Rule 38    case_item -> constant COLON statement
Rule 39    procedure_call -> PROCEDURE_NAME LPAREN expr_list RPAREN
Rule 40    procedure_call -> IDENTIFIER LPAREN expr_list RPAREN
Rule 41    function_call -> FUNCTION_NAME LPAREN expr_list RPAREN
Rule 42    function_call -> IDENTIFIER LPAREN expr_list RPAREN
Rule 43    expr_list -> expr_list COMMA expression
Rule 44    expr_list -> expression
Rule 45    expr_list -> <empty>
Rule 46    expression -> expression PLUS expression
Rule 47    expression -> expression MINUS expression
Rule 48    expression -> expression TIMES expression
Rule 49    expression -> expression DIVIDE expression
Rule 50    expression -> expression DIV expression
Rule 51    expression -> expression MOD expression
Rule 52    expression -> expression EQUALS expression
Rule 53    expression -> expression LESSTHAN expression
Rule 54    expression -> expression GREATERTHAN expression
Rule 55    expression -> expression LESSEQUALS expression
Rule 56    expression -> expression GREATEQUALS expression
Rule 57    expression -> expression LESSGREAT expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression -> NOT expression
Rule 61    expression -> LPAREN expression RPAREN
Rule 62    expression -> factor
Rule 63    factor -> NUMBER
Rule 64    factor -> BOOLEAN_LITERAL
Rule 65    factor -> IDENTIFIER
Rule 66    factor -> IDENTIFIER LBRACKET expression RBRACKET
Rule 67    factor -> CHAR_LITERAL
Rule 68    factor -> STRING_LITERAL
Rule 69    factor -> function_call
Rule 70    constant -> NUMBER
Rule 71    constant -> BOOLEAN_LITERAL
Rule 72    constant -> IDENTIFIER
Rule 73    constant -> CHAR_LITERAL
Rule 74    constant -> STRING_LITERAL

Terminals, with rules where they appear

AND                  : 58
ARRAY                : 16
ATRIBUTION           : 29 33 34
BEGIN                : 17 18
BOOLEAN              : 12
BOOLEAN_LITERAL      : 64 71
CARET                : 
CASE                 : 35
CHAR                 : 15
CHAR_LITERAL         : 67 73
COLON                : 7 8 38
COMMA                : 9 43
CONST                : 
DIV                  : 50
DIVIDE               : 49
DIVIDEEQUALS         : 
DO                   : 32 33 34
DOUBLEPERIOD         : 16
DOWNTO               : 34
ELSE                 : 30
END                  : 17 18 35
EQUALS               : 52
FILE                 : 
FOR                  : 33 34
FUNCTION             : 
FUNCTION_NAME        : 41
GOTO                 : 
GREATEQUALS          : 56
GREATERTHAN          : 54
IDENTIFIER           : 1 9 10 29 33 34 40 42 65 66 72
IF                   : 30 31
IN                   : 
INTEGER              : 11
LABEL                : 
LBRACKET             : 16 66
LBRACKETSUB          : 
LESSEQUALS           : 55
LESSGREAT            : 57
LESSTHAN             : 53
LPAREN               : 39 40 41 42 61
MINUS                : 47
MINUSEQUALS          : 
MOD                  : 51
NIL                  : 
NOT                  : 60
NUMBER               : 16 16 63 70
OF                   : 16 35
OR                   : 59
PACKED               : 
PERIOD               : 1
PLUS                 : 46
PLUSEQUALS           : 
PROCEDURE            : 
PROCEDURE_NAME       : 39
PROGRAM              : 1
RBRACKET             : 16 66
RBRACKETSUB          : 
REAL                 : 13
RECORD               : 
REPEAT               : 
RPAREN               : 39 40 41 42 61
SEMICOLON            : 1 5 6 19 36
SET                  : 
STRING               : 14
STRING_LITERAL       : 68 74
THEN                 : 30 31
TIMES                : 48
TIMESEQUALS          : 
TO                   : 33
TYPE                 : 
UNTIL                : 
VAR                  : 3
WHILE                : 32
WITH                 : 
error                : 

Nonterminals, with rules where they appear

array                : 8
atribution_statement : 21
block                : 1
case_item            : 36 37
case_list            : 35 36
case_statement       : 25
constant             : 38
decl                 : 5 6
declarations         : 2
expr_list            : 39 40 41 42 43
expression           : 29 30 31 32 33 33 34 34 35 43 44 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 66
factor               : 62
for_statement        : 24
function_call        : 69
if_statement         : 22
procedure_call       : 26
program              : 0
statement            : 19 20 30 30 31 32 33 34 38
statement_list       : 17 19
sub_block            : 2 27
type                 : 7 16
var_list             : 3 5
vars                 : 7 8 9
while_statement      : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER SEMICOLON block PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER SEMICOLON block PERIOD

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . SEMICOLON block PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENTIFIER SEMICOLON . block PERIOD
    (2) block -> . declarations sub_block
    (3) declarations -> . VAR var_list
    (4) declarations -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 4 (declarations -> .)

    block                          shift and go to state 5
    declarations                   shift and go to state 6

state 5

    (1) program -> PROGRAM IDENTIFIER SEMICOLON block . PERIOD

    PERIOD          shift and go to state 8


state 6

    (2) block -> declarations . sub_block
    (17) sub_block -> . BEGIN statement_list END
    (18) sub_block -> . BEGIN END

    BEGIN           shift and go to state 10

    sub_block                      shift and go to state 9

state 7

    (3) declarations -> VAR . var_list
    (5) var_list -> . var_list decl SEMICOLON
    (6) var_list -> . decl SEMICOLON
    (7) decl -> . vars COLON type
    (8) decl -> . vars COLON array
    (9) vars -> . vars COMMA IDENTIFIER
    (10) vars -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    var_list                       shift and go to state 11
    decl                           shift and go to state 12
    vars                           shift and go to state 13

state 8

    (1) program -> PROGRAM IDENTIFIER SEMICOLON block PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER SEMICOLON block PERIOD .)


state 9

    (2) block -> declarations sub_block .

    PERIOD          reduce using rule 2 (block -> declarations sub_block .)


state 10

    (17) sub_block -> BEGIN . statement_list END
    (18) sub_block -> BEGIN . END
    (19) statement_list -> . statement_list SEMICOLON statement
    (20) statement_list -> . statement
    (21) statement -> . atribution_statement
    (22) statement -> . if_statement
    (23) statement -> . while_statement
    (24) statement -> . for_statement
    (25) statement -> . case_statement
    (26) statement -> . procedure_call
    (27) statement -> . sub_block
    (28) statement -> .
    (29) atribution_statement -> . IDENTIFIER ATRIBUTION expression
    (30) if_statement -> . IF expression THEN statement ELSE statement
    (31) if_statement -> . IF expression THEN statement
    (32) while_statement -> . WHILE expression DO statement
    (33) for_statement -> . FOR IDENTIFIER ATRIBUTION expression TO expression DO statement
    (34) for_statement -> . FOR IDENTIFIER ATRIBUTION expression DOWNTO expression DO statement
    (35) case_statement -> . CASE expression OF case_list END
    (39) procedure_call -> . PROCEDURE_NAME LPAREN expr_list RPAREN
    (40) procedure_call -> . IDENTIFIER LPAREN expr_list RPAREN
    (17) sub_block -> . BEGIN statement_list END
    (18) sub_block -> . BEGIN END

  ! shift/reduce conflict for END resolved as shift
    END             shift and go to state 16
    SEMICOLON       reduce using rule 28 (statement -> .)
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    CASE            shift and go to state 29
    PROCEDURE_NAME  shift and go to state 30
    BEGIN           shift and go to state 10

  ! END             [ reduce using rule 28 (statement -> .) ]

    statement_list                 shift and go to state 15
    statement                      shift and go to state 17
    atribution_statement           shift and go to state 18
    if_statement                   shift and go to state 19
    while_statement                shift and go to state 20
    for_statement                  shift and go to state 21
    case_statement                 shift and go to state 22
    procedure_call                 shift and go to state 23
    sub_block                      shift and go to state 24

state 11

    (3) declarations -> VAR var_list .
    (5) var_list -> var_list . decl SEMICOLON
    (7) decl -> . vars COLON type
    (8) decl -> . vars COLON array
    (9) vars -> . vars COMMA IDENTIFIER
    (10) vars -> . IDENTIFIER

    BEGIN           reduce using rule 3 (declarations -> VAR var_list .)
    IDENTIFIER      shift and go to state 14

    decl                           shift and go to state 31
    vars                           shift and go to state 13

state 12

    (6) var_list -> decl . SEMICOLON

    SEMICOLON       shift and go to state 32


state 13

    (7) decl -> vars . COLON type
    (8) decl -> vars . COLON array
    (9) vars -> vars . COMMA IDENTIFIER

    COLON           shift and go to state 33
    COMMA           shift and go to state 34


state 14

    (10) vars -> IDENTIFIER .

    COLON           reduce using rule 10 (vars -> IDENTIFIER .)
    COMMA           reduce using rule 10 (vars -> IDENTIFIER .)


state 15

    (17) sub_block -> BEGIN statement_list . END
    (19) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 35
    SEMICOLON       shift and go to state 36


state 16

    (18) sub_block -> BEGIN END .

    PERIOD          reduce using rule 18 (sub_block -> BEGIN END .)
    END             reduce using rule 18 (sub_block -> BEGIN END .)
    SEMICOLON       reduce using rule 18 (sub_block -> BEGIN END .)
    ELSE            reduce using rule 18 (sub_block -> BEGIN END .)


state 17

    (20) statement_list -> statement .

    END             reduce using rule 20 (statement_list -> statement .)
    SEMICOLON       reduce using rule 20 (statement_list -> statement .)


state 18

    (21) statement -> atribution_statement .

    END             reduce using rule 21 (statement -> atribution_statement .)
    SEMICOLON       reduce using rule 21 (statement -> atribution_statement .)
    ELSE            reduce using rule 21 (statement -> atribution_statement .)


state 19

    (22) statement -> if_statement .

    END             reduce using rule 22 (statement -> if_statement .)
    SEMICOLON       reduce using rule 22 (statement -> if_statement .)
    ELSE            reduce using rule 22 (statement -> if_statement .)


state 20

    (23) statement -> while_statement .

    END             reduce using rule 23 (statement -> while_statement .)
    SEMICOLON       reduce using rule 23 (statement -> while_statement .)
    ELSE            reduce using rule 23 (statement -> while_statement .)


state 21

    (24) statement -> for_statement .

    END             reduce using rule 24 (statement -> for_statement .)
    SEMICOLON       reduce using rule 24 (statement -> for_statement .)
    ELSE            reduce using rule 24 (statement -> for_statement .)


state 22

    (25) statement -> case_statement .

    END             reduce using rule 25 (statement -> case_statement .)
    SEMICOLON       reduce using rule 25 (statement -> case_statement .)
    ELSE            reduce using rule 25 (statement -> case_statement .)


state 23

    (26) statement -> procedure_call .

    END             reduce using rule 26 (statement -> procedure_call .)
    SEMICOLON       reduce using rule 26 (statement -> procedure_call .)
    ELSE            reduce using rule 26 (statement -> procedure_call .)


state 24

    (27) statement -> sub_block .

    END             reduce using rule 27 (statement -> sub_block .)
    SEMICOLON       reduce using rule 27 (statement -> sub_block .)
    ELSE            reduce using rule 27 (statement -> sub_block .)


state 25

    (29) atribution_statement -> IDENTIFIER . ATRIBUTION expression
    (40) procedure_call -> IDENTIFIER . LPAREN expr_list RPAREN

    ATRIBUTION      shift and go to state 37
    LPAREN          shift and go to state 38


state 26

    (30) if_statement -> IF . expression THEN statement ELSE statement
    (31) if_statement -> IF . expression THEN statement
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . expression DIV expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression LESSTHAN expression
    (54) expression -> . expression GREATERTHAN expression
    (55) expression -> . expression LESSEQUALS expression
    (56) expression -> . expression GREATEQUALS expression
    (57) expression -> . expression LESSGREAT expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . factor
    (63) factor -> . NUMBER
    (64) factor -> . BOOLEAN_LITERAL
    (65) factor -> . IDENTIFIER
    (66) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (67) factor -> . CHAR_LITERAL
    (68) factor -> . STRING_LITERAL
    (69) factor -> . function_call
    (41) function_call -> . FUNCTION_NAME LPAREN expr_list RPAREN
    (42) function_call -> . IDENTIFIER LPAREN expr_list RPAREN

    NOT             shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 43
    BOOLEAN_LITERAL shift and go to state 44
    IDENTIFIER      shift and go to state 45
    CHAR_LITERAL    shift and go to state 46
    STRING_LITERAL  shift and go to state 47
    FUNCTION_NAME   shift and go to state 49

    expression                     shift and go to state 39
    factor                         shift and go to state 42
    function_call                  shift and go to state 48

state 27

    (32) while_statement -> WHILE . expression DO statement
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . expression DIV expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression LESSTHAN expression
    (54) expression -> . expression GREATERTHAN expression
    (55) expression -> . expression LESSEQUALS expression
    (56) expression -> . expression GREATEQUALS expression
    (57) expression -> . expression LESSGREAT expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . factor
    (63) factor -> . NUMBER
    (64) factor -> . BOOLEAN_LITERAL
    (65) factor -> . IDENTIFIER
    (66) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (67) factor -> . CHAR_LITERAL
    (68) factor -> . STRING_LITERAL
    (69) factor -> . function_call
    (41) function_call -> . FUNCTION_NAME LPAREN expr_list RPAREN
    (42) function_call -> . IDENTIFIER LPAREN expr_list RPAREN

    NOT             shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 43
    BOOLEAN_LITERAL shift and go to state 44
    IDENTIFIER      shift and go to state 45
    CHAR_LITERAL    shift and go to state 46
    STRING_LITERAL  shift and go to state 47
    FUNCTION_NAME   shift and go to state 49

    expression                     shift and go to state 50
    factor                         shift and go to state 42
    function_call                  shift and go to state 48

state 28

    (33) for_statement -> FOR . IDENTIFIER ATRIBUTION expression TO expression DO statement
    (34) for_statement -> FOR . IDENTIFIER ATRIBUTION expression DOWNTO expression DO statement

    IDENTIFIER      shift and go to state 51


state 29

    (35) case_statement -> CASE . expression OF case_list END
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . expression DIV expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression LESSTHAN expression
    (54) expression -> . expression GREATERTHAN expression
    (55) expression -> . expression LESSEQUALS expression
    (56) expression -> . expression GREATEQUALS expression
    (57) expression -> . expression LESSGREAT expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . factor
    (63) factor -> . NUMBER
    (64) factor -> . BOOLEAN_LITERAL
    (65) factor -> . IDENTIFIER
    (66) factor -> . IDENTIFIER LBRACKET expression RBRACKET
    (67) factor -> . CHAR_LITERAL
    (68) factor -> . STRING_LITERAL
    (69) factor -> . function_call
    (41) function_call -> . FUNCTION_NAME LPAREN expr_list RPAREN
    (42) function_call -> . IDENTIFIER LPAREN expr_list RPAREN

    NOT             shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 43
    BOOLEAN_LITERAL shift and go to state 44
    IDENTIFIER      shift and go to state 45
    CHAR_LITERAL    shift and go to state 46
    STRING_LITERAL  shift and go to state 47
    FUNCTION_NAME   shift and go to state 49

    expression                     shift and go to state 52
    factor                         shift and go to state 42
    function_call                  shift and go to state 48

state 30

    (39) procedure_call -> PROCEDURE_NAME . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 53


state 31

    (5) var_list -> var_list decl . SEMICOLON

    SEMICOLON       shift and go to state 54


state 32

    (6) var_list -> decl SEMICOLON .

    IDENTIFIER      reduce using rule 6 (var_list -> decl SEMICOLON .)
    BEGIN           reduce using rule 6 (var_list -> decl SEMICOLON .)


state 33

    (7) decl -> vars COLON . type
    (8) decl -> vars COLON . array
    (11) type -> . INTEGER
    (12) type -> . BOOLEAN
    (13) type -> . REAL
    (14) type -> . STRING
    (15) type -> . CHAR
    (16) array -> . ARRAY LBRACKET NUMBER DOUBLEPERIOD NUMBER RBRACKET OF type

    INTEGER         shift and go to state 57
    BOOLEAN         shift and go to state 58
    REAL            shift and go to state 59
    STRING          shift and go to state 60
    CHAR            shift and go to state 61
    ARRAY           shift and go to state 62

    type                           shift and go to state 55
    array                          shift and go to state 56

state 34

    (9) vars -> vars COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 63


state 35

    (17) sub_block -> BEGIN statement_list END .

    PERIOD          reduce using rule 17 (sub_block -> BEGIN statement_list END .)
    END             reduce using rule 17 (sub_block -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 17 (sub_block -> BEGIN statement_list END .)
    ELSE            reduce using rule 17 (sub_block -> BEGIN statement_list END .)


state 36

    (19) statement_list -> statement_list SEMICOLON . statement
    (21) statement -> . atribution_statement
    (22) statement -> . if_statement
    (23) statement -> . while_statement
    (24) statement -> . for_statement
    (25) statement -> . case_statement
    (26) statement -> . procedure_call
    (27) statement -> . sub_block
    (28) statement -> .
    (29) atribution_statement -> . IDENTIFIER ATRIBUTION expression
    (30) if_statement -> . IF expression THEN statement ELSE statement
    (31) if_statement -> . IF expression THEN statement
    (32) while_statement -> . WHILE expression DO statement
    (33) for_statement -> . FOR IDENTIFIER ATRIBUTION expression TO expression DO statement
    (34) for_statement -> . FOR IDENTIFIER ATRIBUTION expression DOWNTO expression DO statement
    (35) case_statement -> . CASE expression OF case_list END
    (39) procedure_call -> . PROCEDURE_NAME LPAREN expr_list RPAREN
    (40) procedure_call -> . IDENTIFIER LPAREN expr_list RPAREN
    (17) sub_block -> . BEGIN statement_list END
    (18) sub_block -> . BEGIN END

    END             reduce using rule 28 (statement -> .)
    SEMICOLON       reduce using rule 28 (statement -> .)
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    CASE            shift and go to state 29
    PROCEDURE_NAME  shift and go to state 30
    BEGIN           shift and go to state 10

    statement                      shift and go to state 64
    atribution_statement           shift and go to state 18
    if_statement                   shift and go to state 19
    while_statement                shift and go to state 20
    for_statement                  shift and go to state 21
    case_statement                 shift and go to state 22
    procedure_call                 shift and go to state 23
    sub_block                      shift and go to state 24

state 37
